stop the overflow of in-volume search results; change highlight color to new readux red

--- a/apps/static/css/project.scss
+++ b/apps/static/css/project.scss
@@ -3547,7 +3547,7 @@ ol#search-results dl {
 }
 
 .rx-volume-search em {
-  color: #950953 !important;
+  color: #E60000 !important;
 }
 
 .rx-volume-search {
